--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_general">#151f36</color>
+    <color name="fontOrange">#EF3737</color>
+    <color name="fontTextNormal">#DBDCE0</color>
+    <color name="backgroungButton">#30374D</color>
 </resources>
