--- a/app/src/main/res/layout/fragment_menu_inicial.xml
+++ b/app/src/main/res/layout/fragment_menu_inicial.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +8,8 @@
     android:id="@+id/fragment_menu"
     android:name="fragment_menu"
     android:background="@color/background_general"
-    app:defaultNavHost="true">
-
-    <!-- TODO: Update blank fragment layout -->
-
+    app:defaultNavHost="true"
+    tools:ignore="MissingClass">
 
     
     <TextView
@@ -21,8 +20,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="12dp"
-        android:text="@string/text_usuario"
-        android:textSize="22dp"
+        android:text="@string/texto_visitante"
+        android:textSize="22sp"
         android:textColor="@color/white"/>
 
     <TextView
@@ -33,7 +32,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="12dp"
         android:text="@string/texto_coleccionista"
-        android:textSize="22dp"
+        android:textSize="22sp"
         android:textColor="@color/white"/>
 
 
