--- a/app/src/main/res/layout/activity_album_detail.xml
+++ b/app/src/main/res/layout/activity_album_detail.xml
@@ -16,9 +16,9 @@
         android:id="@+id/tvName"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:text="Detalle album"
+        android:text="@string/text_album_descripcion"
         android:textColor="@color/white"
-        android:textSize="25dp"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="12dp"/>
