--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="129dp"
         android:background="#FF6200EE"
-        android:text="Visitante"
+        android:text="@string/texto_visitante"
         android:textAlignment="center"
         android:textColor="@color/fontTextNormal"
         android:textSize="14sp"
@@ -57,7 +57,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="12dp"
         android:fontFamily="sans-serif-black"
-        android:text="Vinilo App"
+        android:text="@string/texto_viniloApp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/fontOrange"
         android:textSize="48sp"
@@ -85,7 +85,7 @@
         android:layout_marginTop="108dp"
         android:layout_marginEnd="128dp"
         android:background="#FF6200EE"
-        android:text="Coleccionista"
+        android:text="@string/texto_coleccionista"
         android:textAlignment="center"
         android:textColor="@color/fontTextNormal"
         android:textSize="14sp"
