--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -32,13 +32,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_marginBottom="220dp"
-                    android:text="Album #"
+                    android:text="@string/text_album"
                     android:textAlignment="center"
                     android:textColor="@color/fontTextNormal"
                     android:textSize="24sp"
                     tools:layout_editor_absoluteX="28dp"
                     app:layout_constraintTop_toTopOf="parent"
-                    />/>
+                    />
 
                 <ImageView
                     android:id="@+id/ivCover"
@@ -51,7 +51,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textAlbum"
 
-                />
+                    tools:ignore="ContentDescription" />
 
                 <!--android:text="@{album.description}"-->
 
