HU01_09: se incorpora menú coleccionista intermedio y se ajusta la navegación entre fragmentos.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,8 +10,8 @@
         android:name="com.example.vinyls.view.FragmentMenuInicial"
         tools:layout="@layout/fragment_menu_inicial">
         <action
-            android:id="@+id/action_fragmentMenuInicial_to_fragmentAlbumList"
-            app:destination="@id/fragmentAlbumList" />
+            android:id="@+id/action_fragmentMenuInicial_to_fragmentMenuColeccionista"
+            app:destination="@id/fragmentMenuColeccionista" />
     </fragment>
 
 
@@ -22,9 +22,23 @@
         <argument
             android:name="user"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_fragmentAlbumList_to_fragmentMenuColeccionista"
+            app:destination="@id/fragmentMenuColeccionista" />
 
     </fragment>
 
 
  <action android:id="@+id/action_global_fragmentMenuInicial" app:destination="@id/fragmentMenuInicial"/>
+    <fragment
+        android:id="@+id/fragmentMenuColeccionista"
+        android:name="com.example.vinyls.view.FragmentMenuColeccionista"
+        tools:layout="@layout/fragment_menu_coleccionista" >
+        <action
+            android:id="@+id/action_fragmentMenuColeccionista_to_fragmentAlbumList"
+            app:destination="@id/fragmentAlbumList" />
+        <action
+            android:id="@+id/action_fragmentMenuColeccionista_to_fragmentMenuInicial"
+            app:destination="@id/fragmentMenuInicial" />
+    </fragment>
 </navigation>
