--- a/app/src/main/res/layout/fragment_menu_inicial.xml
+++ b/app/src/main/res/layout/fragment_menu_inicial.xml
@@ -9,8 +9,6 @@
     app:defaultNavHost="true"
     android:background="@color/background_general">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <TextView
         android:id="@+id/textViewBienvenida"
         android:layout_width="wrap_content"
@@ -56,9 +54,9 @@
     <TextView
         android:id="@+id/tvVisitante"
         android:layout_width="193dp"
-        android:layout_height="34dp"
+        android:layout_height="wrap_content"
         android:layout_margin="90dp"
-        android:background="#FF6200EE"
+        android:background="@color/backgroungButton"
         android:text="@string/text_usuario"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -73,10 +71,10 @@
     <TextView
         android:id="@+id/tvColeccionista"
         android:layout_width="194dp"
-        android:layout_height="34dp"
+        android:layout_height="wrap_content"
         android:layout_margin="90dp"
         android:layout_marginTop="84dp"
-        android:background="#FF6200EE"
+        android:background="@color/backgroungButton"
         android:text="@string/texto_coleccionista"
         android:textAlignment="center"
         android:textColor="@color/white"
