--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,6 +12,9 @@
         <action
             android:id="@+id/action_fragmentMenuInicial_to_fragmentMenuColeccionista"
             app:destination="@id/fragmentMenuColeccionista" />
+        <action
+            android:id="@+id/action_fragmentMenuInicial_to_fragmentMenuVisitante"
+            app:destination="@id/fragmentMenuVisitante" />
     </fragment>
 
 
@@ -41,4 +44,8 @@
             android:id="@+id/action_fragmentMenuColeccionista_to_fragmentMenuInicial"
             app:destination="@id/fragmentMenuInicial" />
     </fragment>
+    <fragment
+        android:id="@+id/fragmentMenuVisitante"
+        android:name="com.example.vinyls.view.FragmentMenuVisitante"
+        tools:layout="@layout/fragment_menu_visitante" />
 </navigation>
