--- a/app/src/main/res/layout/fragment_menu_inicial.xml
+++ b/app/src/main/res/layout/fragment_menu_inicial.xml
@@ -51,16 +51,16 @@
         tools:layout_editor_absoluteX="28dp" />
 
 
-    <TextView
-        android:id="@+id/tvVisitante"
-        android:layout_width="193dp"
+    <Button
+        android:id="@+id/btnVisitante"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="90dp"
-        android:background="@color/backgroungButton"
+        android:background="@drawable/button_general"
         android:text="@string/text_usuario"
         android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="19sp"
+        android:textColor="@color/fontTextNormal"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -68,20 +68,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.55" />
 
-    <TextView
-        android:id="@+id/tvColeccionista"
-        android:layout_width="194dp"
+    <Button
+        android:id="@+id/btnColeccionista"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="90dp"
         android:layout_marginTop="84dp"
-        android:background="@color/backgroungButton"
+        android:background="@drawable/button_general"
         android:text="@string/texto_coleccionista"
         android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="19sp"
+        android:textColor="@color/fontTextNormal"
+        app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvVisitante" />
+        app:layout_constraintTop_toBottomOf="@id/btnVisitante" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
