--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,6 +5,11 @@
     android:id="@+id/nav_graph.xml"
     app:startDestination="@id/fragmentMenuInicial">
 
+
+    <action android:id="@+id/action_global_fragmentMenuInicial"
+        app:destination="@id/fragmentMenuInicial"/>
+
+         <!-- Coleccionista o Visitante   -->
     <fragment
         android:id="@+id/fragmentMenuInicial"
         android:name="com.example.vinyls.view.FragmentMenuInicial"
@@ -17,7 +22,25 @@
             app:destination="@id/fragmentMenuVisitante" />
     </fragment>
 
+    <!-- Coleccionista   -->
+    <fragment
+        android:id="@+id/fragmentMenuColeccionista"
+        android:name="com.example.vinyls.view.FragmentMenuColeccionista"
+        tools:layout="@layout/fragment_menu_coleccionista"/>
+        <action
+            android:id="@+id/action_fragmentMenuColeccionista_to_fragmentAlbumList"
+            app:destination="@id/fragmentAlbumList" />
 
+    <!-- Visitante   -->
+    <fragment
+        android:id="@+id/fragmentMenuVisitante"
+        android:name="com.example.vinyls.view.FragmentMenuVisitante"
+        tools:layout="@layout/fragment_menu_visitante" />
+        <action
+            android:id="@+id/action_fragmentMenuVisitante_to_fragmentAlbumList"
+            app:destination="@id/fragmentAlbumList" />
+
+    <!-- Listado Albumes  -->
     <fragment
         android:id="@+id/fragmentAlbumList"
         android:name="com.example.vinyls.view.FragmentAlbumList"
@@ -28,24 +51,6 @@
         <action
             android:id="@+id/action_fragmentAlbumList_to_fragmentMenuColeccionista"
             app:destination="@id/fragmentMenuColeccionista" />
-
     </fragment>
 
-
- <action android:id="@+id/action_global_fragmentMenuInicial" app:destination="@id/fragmentMenuInicial"/>
-    <fragment
-        android:id="@+id/fragmentMenuColeccionista"
-        android:name="com.example.vinyls.view.FragmentMenuColeccionista"
-        tools:layout="@layout/fragment_menu_coleccionista" >
-        <action
-            android:id="@+id/action_fragmentMenuColeccionista_to_fragmentAlbumList"
-            app:destination="@id/fragmentAlbumList" />
-        <action
-            android:id="@+id/action_fragmentMenuColeccionista_to_fragmentMenuInicial"
-            app:destination="@id/fragmentMenuInicial" />
-    </fragment>
-    <fragment
-        android:id="@+id/fragmentMenuVisitante"
-        android:name="com.example.vinyls.view.FragmentMenuVisitante"
-        tools:layout="@layout/fragment_menu_visitante" />
 </navigation>
