--- a/app/src/main/res/layout/fragment_menu_visitante.xml
+++ b/app/src/main/res/layout/fragment_menu_visitante.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_general"
-    android:id="@+id/fragmentMenuGuest"
-    tools:context=".view.FragmentMenuVisitante">
+    android:id="@+id/fragmentMenuCollector"
+    tools:context=".view.FragmentMenuColeccionista">
 
 
     <TextView
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/texto_visitante_lowcase"
+        android:text="@string/texto_coleccionista_lowcase"
         android:textAlignment="center"
         android:textColor="@color/fontTextNormal"
         android:textSize="20sp"
@@ -29,13 +29,12 @@
         android:id="@+id/buttonAlbumsGuest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="196dp"
         android:background="@drawable/button_general"
         android:text="@string/albums_string"
         android:textColor="@color/fontTextNormal"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewGuest" />
 
@@ -49,9 +48,10 @@
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonAlbumsGuest"
-        app:layout_constraintVertical_bias="0.191" />
+        app:layout_constraintVertical_bias="0.266" />
 
     <Button
         android:id="@+id/buttonCollectorsGuest"
@@ -68,5 +68,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonArtistGuest"
         app:layout_constraintVertical_bias="0.79" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
