--- a/app/src/main/res/layout/fragment_album_list.xml
+++ b/app/src/main/res/layout/fragment_album_list.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragmentAlbumList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.FragmentAlbumList"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     tools:background="@color/purple_200"
-    android:id="@+id/fragmentAlbumList">
+    tools:context=".view.FragmentAlbumList">
 
 
     <TextView
@@ -29,12 +29,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/albumsRv"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="600dp"
-        app:layout_constraintTop_toBottomOf="@id/textViewAlbums"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewAlbums"
         tools:listitem="@layout/album_item"
+
+
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
