--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,9 +6,6 @@
     app:startDestination="@id/fragmentMenuInicial">
 
 
-    <action android:id="@+id/action_global_fragmentMenuInicial"
-        app:destination="@id/fragmentMenuInicial"/>
-
          <!-- Coleccionista o Visitante   -->
     <fragment
         android:id="@+id/fragmentMenuInicial"
@@ -49,8 +46,31 @@
             android:name="user"
             app:argType="integer" />
         <action
-            android:id="@+id/action_fragmentAlbumList_to_fragmentMenuColeccionista"
-            app:destination="@id/fragmentMenuColeccionista" />
+            android:id="@+id/action_fragmentAlbumList_to_fragmentAlbumDetail"
+            app:destination="@id/fragmentAlbumDetail" />
     </fragment>
 
+
+    <!-- Detalle album  -->
+        <fragment
+            android:id="@+id/fragmentAlbumDetail"
+            android:name="com.example.vinyls.view.FragmentAlbumDetail"
+            tools:layout="@layout/fragment_album_detail">
+            <argument
+                android:name="name"
+                app:argType="string" />
+            <argument
+                android:name="genero"
+                app:argType="string" />
+            <argument
+                android:name="cover"
+                app:argType="string" />
+            <argument
+                android:name="fecha"
+                app:argType="string" />
+            <argument
+                android:name="description"
+                app:argType="string" />
+        </fragment><action android:id="@+id/action_global_fragmentMenuInicial"
+        app:destination="@id/fragmentMenuInicial"/>
 </navigation>
