--- a/app/src/main/res/layout/fragment_collector_list.xml
+++ b/app/src/main/res/layout/fragment_collector_list.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragmentCollectorList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.FragmentCollectorList"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     tools:background="@color/purple_200"
-    android:id="@+id/fragmentCollectorList">
+    tools:context=".view.FragmentCollectorList">
 
     <TextView
         android:id="@+id/textViewCollector"
@@ -30,10 +30,9 @@
         android:id="@+id/collectorRv"
         android:layout_width="match_parent"
         android:layout_height="600dp"
-        app:layout_constraintTop_toBottomOf="@id/textViewCollector"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="15dp"
-        tools:listitem="@layout/collector_item"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewCollector"
+        tools:listitem="@layout/collector_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
