--- a/app/src/main/res/layout/fragment_musician_list.xml
+++ b/app/src/main/res/layout/fragment_musician_list.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragmentAlbumList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.FragmentMusicianList"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     tools:background="@color/purple_200"
-    android:id="@+id/fragmentMusicianList">
+    tools:context=".view.FragmentAlbumList">
+
 
     <TextView
         android:id="@+id/textViewMusician"
@@ -16,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
         android:fontFamily="sans-serif-medium"
-        android:text="@string/texto_musician_lowcase"
+        android:text="@string/artistas_string"
         android:textAlignment="center"
         android:textColor="@color/fontTextNormal"
         android:textSize="20sp"
@@ -28,12 +29,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/musicianRv"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="600dp"
-        app:layout_constraintTop_toBottomOf="@id/textViewMusician"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="15dp"
-        tools:listitem="@layout/musician_item"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewMusician"
+        tools:listitem="@layout/album_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
