--- a/app/src/main/res/layout/collector_item.xml
+++ b/app/src/main/res/layout/collector_item.xml
@@ -1,61 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:background="@color/purple_200">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="collector"
             type="com.example.vinyls.models.Collector" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:background="@color/background_clear">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
+        android:background="@color/backgroungButton"
+        android:baselineAligned="false"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-        <com.google.android.material.card.MaterialCardView
+        <ImageView
+            android:id="@+id/imageCover"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="15dp"
+            android:contentDescription="Imagen collector"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/collector" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent"
+            android:layout_marginVertical="15dp"
+            android:baselineAligned="false"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="83dp"
-                android:background="@color/backgroungButton"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textViewCollectorName"
+                    android:id="@+id/textView1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="28dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_weight=".85"
                     android:text="@{collector.name}"
                     android:textColor="@color/white"
-                    app:layout_constraintStart_toEndOf="@+id/textViewName"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textViewName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="Nombre: "
-                    android:textColor="@color/white"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{collector.telephone}"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="italic" />
 
-                />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.card.MaterialCardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{collector.email}"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="italic" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 </layout>
