--- a/app/src/main/res/layout/musician_item.xml
+++ b/app/src/main/res/layout/musician_item.xml
@@ -5,91 +5,78 @@
     tools:background="@color/purple_200">
 
     <data>
-        <variable name="musician" type="com.example.vinyls.models.Musician"/>
+        <variable
+            name="musician"
+            type="com.example.vinyls.models.Musician" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:background="@color/background_clear">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        app:strokeColor="@color/cardview_shadow_start_color"
+        app:strokeWidth="1dp">
 
-        <com.google.android.material.card.MaterialCardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:orientation="horizontal">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <ImageView
+                android:id="@+id/imageViewMusician"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginVertical="15dp"
+                android:scaleType="fitXY"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.058"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                android:layout_width="match_parent"
-                android:layout_height="83dp"
-                android:background="@color/backgroungButton"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:id="@+id/textViewMusicianName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="12dp"
-                    android:text="@{musician.name}"
-                    android:textColor="@color/white"
-                    app:layout_constraintStart_toEndOf="@+id/textViewName"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="112dp"
-                    android:layout_height="55dp"
-                    android:src="@drawable/ic_launcher_foreground"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.058"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="6dp">
 
                 <TextView
                     android:id="@+id/textViewName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="12dp"
+
                     android:text="Nombre: "
                     android:textColor="@color/white"
-                    app:layout_constraintStart_toEndOf="@+id/imageView"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    />
 
                 <TextView
-                    android:id="@+id/textViewMusicianBirthDate"
-                    android:layout_width="145dp"
-                    android:layout_height="21dp"
-                    android:layout_marginTop="48dp"
-                    android:text="@{musician.birthDate}"
+                    android:id="@+id/textViewMusicianName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{musician.name}"
                     android:textColor="@color/white"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.333"
-                    app:layout_constraintStart_toEndOf="@+id/textViewBirthDate"
-                    app:layout_constraintTop_toTopOf="parent" />
+                     />
 
                 <TextView
                     android:id="@+id/textViewBirthDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
                     android:text="Nacimiento: "
                     android:textColor="@color/white"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageView"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.75" />
+                    />
+
+                <TextView
+                    android:id="@+id/textViewMusicianBirthDate"
+                    android:layout_width="145dp"
+                    android:layout_height="21dp"
+                    android:text="@{musician.birthDate}"
+                    android:textColor="@color/white"
+                     />
+
                 />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.card.MaterialCardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
