HU04: Detalle artista

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,11 +5,11 @@
     android:id="@+id/nav_graph.xml"
     app:startDestination="@id/fragmentMenuInicial">
 
-    <action android:id="@+id/action_global_fragmentMenuInicial"
-        app:destination="@id/fragmentMenuInicial"/>
 
+<action android:id="@+id/action_global_fragmentMenuInicial"
+app:destination="@id/fragmentMenuInicial"/>
 
-         <!-- Coleccionista o Visitante   -->
+    <!-- Home   -->
     <fragment
         android:id="@+id/fragmentMenuInicial"
         android:name="com.example.vinyls.view.FragmentMenuInicial"
@@ -22,29 +22,32 @@
             app:destination="@id/fragmentMenuVisitante" />
     </fragment>
 
+
     <!-- Coleccionista   -->
     <fragment
         android:id="@+id/fragmentMenuColeccionista"
         android:name="com.example.vinyls.view.FragmentMenuColeccionista"
         tools:layout="@layout/fragment_menu_coleccionista"/>
-        <action
-            android:id="@+id/action_fragmentMenuColeccionista_to_fragmentAlbumList"
-            app:destination="@id/fragmentAlbumList" />
+    <action
+        android:id="@+id/action_fragmentMenuColeccionista_to_fragmentAlbumList"
+        app:destination="@id/fragmentAlbumList" />
+
+
 
     <!-- Visitante   -->
     <fragment
         android:id="@+id/fragmentMenuVisitante"
         android:name="com.example.vinyls.view.FragmentMenuVisitante"
         tools:layout="@layout/fragment_menu_visitante" />
-        <action
-            android:id="@+id/action_fragmentMenuVisitante_to_fragmentAlbumList"
-            app:destination="@id/fragmentAlbumList" />
-         <action
-            android:id="@+id/action_fragmentMenuVisitante_to_fragmentMusicianList2"
-            app:destination="@id/fragmentMusicianList2" />
-        <action
-            android:id="@+id/action_fragmentMenuVisitante_to_fragmentCollectorList3"
-            app:destination="@id/fragmentCollectorList3" />
+    <action
+        android:id="@+id/action_fragmentMenuVisitante_to_fragmentAlbumList"
+        app:destination="@id/fragmentAlbumList" />
+    <action
+        android:id="@+id/action_fragmentMenuVisitante_to_fragmentMusicianList"
+        app:destination="@+id/fragmentMusicianList" />
+    <action
+        android:id="@+id/action_fragmentMenuVisitante_to_fragmentCollectorList3"
+        app:destination="@id/fragmentCollectorList3" />
 
     <!-- Listado Albumes  -->
     <fragment
@@ -81,11 +84,35 @@
             app:argType="string" />
     </fragment>
 
+
+    <!-- Listado Artistas  -->
+    <fragment
+        android:id="@+id/fragmentMusicianList"
+        android:name="com.example.vinyls.view.FragmentMusicianList" >
+        <action
+            android:id="@+id/action_fragmentMusicianList_to_fragmentMusicianDetail"
+            app:destination="@id/fragmentMusicianDetail" />
+    </fragment>
+
     <!-- Detalle artista -->
     <fragment
-        android:id="@+id/fragmentMusicianList2"
-        android:name="com.example.vinyls.view.FragmentMusicianList"
-        tools:layout="@layout/fragment_musician_list" />
+        android:id="@+id/fragmentMusicianDetail"
+        android:name="com.example.vinyls.view.FragmentMusicianDetail"
+        tools:layout="@layout/fragment_musician_detail">
+        <argument
+            android:name="name"
+            app:argType="string" />
+        <argument
+            android:name="birthDate"
+            app:argType="string" />
+        <argument
+            android:name="image"
+            app:argType="string" />
+        <argument
+            android:name="description"
+            app:argType="string" />
+    </fragment>
+
 
     <!-- Detalle coleccionista -->
     <fragment
@@ -95,3 +122,6 @@
 
 
 </navigation>
+
+
+
