--- a/app/src/main/res/layout/fragment_musician_list.xml
+++ b/app/src/main/res/layout/fragment_musician_list.xml
@@ -8,7 +8,7 @@
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     tools:background="@color/purple_200"
-    tools:context=".view.FragmentAlbumList">
+    tools:context=".view.FragmentMusicianList">
 
 
     <TextView
@@ -34,6 +34,6 @@
         android:layout_margin="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewMusician"
-        tools:listitem="@layout/album_item" />
+        tools:listitem="@layout/musician_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
