--- a/app/src/main/res/layout/fragment_musician_detail.xml
+++ b/app/src/main/res/layout/fragment_musician_detail.xml
@@ -31,7 +31,7 @@
         android:layout_height="300dp"
         android:layout_margin="12dp"
         android:contentDescription="@string/text_artista"
-        android:src="@drawable/singer"
+        android:src="@drawable/vinilos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvName" />
