Ajustes realizados de accesibilidad.

--- a/app/src/main/res/layout/fragment_menu_inicial.xml
+++ b/app/src/main/res/layout/fragment_menu_inicial.xml
@@ -59,7 +59,7 @@
         android:background="@drawable/button_general"
         android:text="@string/texto_coleccionista"
         android:textAlignment="center"
-        android:textColor="@color/fontTextNormal"
+        android:textColor="@color/fontTextButton"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,7 @@
         android:background="@drawable/button_general"
         android:text="@string/text_usuario"
         android:textAlignment="center"
-        android:textColor="@color/fontTextNormal"
+        android:textColor="@color/fontTextButton"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
