--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background_general">#151f36</color>
     <color name="background_clear">#26407C</color>
-    <color name="fontOrange">#EF3737</color>
+    <color name="fontOrange">#FFC107</color>
     <color name="fontTextNormal">#DBDCE0</color>
+    <color name="fontTextButton">#151f36</color>
+    <color name="backgroundButton">#DBDCE0</color>
     <color name="backgroungButton">#30374D</color>
 
 </resources>
