--- a/app/src/main/res/drawable/button_general.xml
+++ b/app/src/main/res/drawable/button_general.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/backgroungButton"/>
+        android:color="@color/backgroundButton"/>
 
     <corners
         android:radius="10dp"/>
