--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="5dp"
-        android:background="@color/backgroungButton"
+        android:background="@color/backgroundButton"
         android:baselineAligned="false"
         android:gravity="center_vertical"
         android:orientation="horizontal">
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight=".85"
                     android:text="@{album.name}"
-                    android:textColor="@color/white"
+                    android:textColor="@color/fontTextButton"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -60,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{album.genre}"
-                android:textColor="@color/white"
+                android:textColor="@color/fontTextButton"
                 android:textSize="16sp"
                 android:textStyle="italic" />
 
@@ -72,7 +72,7 @@
                 android:layout_weight=".15"
                 android:gravity="right"
                 android:text="@{album.releaseDate.substring(0,4)}"
-                android:textColor="@color/white"
+                android:textColor="@color/fontTextButton"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
