--- a/app/src/main/res/layout/collector_item.xml
+++ b/app/src/main/res/layout/collector_item.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="5dp"
-        android:background="@color/backgroungButton"
+        android:background="@color/backgroundButton"
         android:baselineAligned="false"
         android:gravity="center_vertical"
         android:orientation="horizontal">
@@ -49,7 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight=".85"
                     android:text="@{collector.name}"
-                    android:textColor="@color/white"
+                    android:textColor="@color/fontTextButton"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{collector.telephone}"
-                android:textColor="@color/white"
+                android:textColor="@color/fontTextButton"
                 android:textSize="16sp"
                 android:textStyle="italic" />
 
@@ -68,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{collector.email}"
-                android:textColor="@color/white"
+                android:textColor="@color/fontTextButton"
                 android:textSize="16sp"
                 android:textStyle="italic" />
 
