--- a/app/src/main/res/layout/fragment_menu_coleccionista.xml
+++ b/app/src/main/res/layout/fragment_menu_coleccionista.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="196dp"
         android:background="@drawable/button_general"
         android:text="@string/albums_string"
-        android:textColor="@color/fontTextNormal"
+        android:textColor="@color/fontTextButton"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/button_general"
         android:text="@string/crear_album_string"
-        android:textColor="@color/fontTextNormal"
+        android:textColor="@color/fontTextButton"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
